Added Getting Subject Names functionality
