# main.go
@@ -22,8 +22,7 @@ func connection() (stores.SqlDb, error) {
 
 func main() {
 	con, err := connection()
-	conn1, err := sql.Open("mysql", "root:root@tcp(localhost:3306)/student") // why?
-
+	con1, err := sql.Open("mysql", "root:root@tcp(localhost:3306)/student")
 	if err != nil {
 		return
 	}
@@ -32,18 +31,19 @@ func main() {
 	subjectHandler := handler.NewSubHandler(subjectService)
 
 	enrollmentService := service.NewEnrollmentStore(con)
-	studentService := service.NewStudentService(stores.SqlDb{conn1}, enrollmentService, subjectService)
+	studentService := service.NewStudentService(stores.SqlDb{con1}, enrollmentService, subjectService)
 	studentHandler := handler.NewStudentHandler(studentService)
 
 	server := mux.NewRouter()
 
 	server.HandleFunc("/subject", subjectHandler.GetSubject).Methods("GET")
-	server.HandleFunc("/subject", subjectHandler.CreateSubject).Methods("POST")
-
-	// server.HandleFunc("/student/", s.GetAll).Methods("GET")
-	server.HandleFunc("/student", studentHandler.Create).Methods("POST")
-	server.HandleFunc("/student", studentHandler.Get).Methods("GET")
+	server.HandleFunc("/subject", subjectHandler.InsertSubject).Methods("POST")
+	server.HandleFunc("/student", studentHandler.InsertStudent).Methods("POST")
+	server.HandleFunc("/student", studentHandler.GetStudent).Methods("GET")
 	server.HandleFunc("/student/{rollNo}/subject/{id}", studentHandler.EnrollStudent).Methods("POST")
+
+	// List all subjects of a particular student
+	server.HandleFunc("/student/{rollNo}/subject", studentHandler.GetAllSubs).Methods("GET")
 
 	http.Handle("/", server)
 	log.Fatal(http.ListenAndServe(":8000", server))
