# openapi.json
@@ -1,7 +1,7 @@
 {
   "openapi": "3.0.3",
   "info": {
-    "title": "Student Deatils - OpenAPI 3.0",
+    "title": "Student Details - OpenAPI 3.0",
     "termsOfService": "http://swagger.io/terms/",
     "contact": {
       "email": "apiteam@swagger.io"
@@ -26,13 +26,13 @@
   ],
   "paths": {
     "/student/{rollNo}": {
-      "delete": {
+      "get": {
         "tags": [
           "student-api"
         ],
-        "summary": "Deletes a student",
-        "description": "delete a student",
-        "operationId": "Delete",
+        "summary": "Find student by RollNo",
+        "description": "Returns a student",
+        "operationId": "GetStudent",
         "parameters": [
           {
             "name": "rollNo",
@@ -45,21 +45,77 @@
           }
         ],
         "responses": {
+          "200": {
+            "description": "successful operation",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/student-api"
+                }
+              }
+            }
+          },
           "400": {
-            "description": "Invalid pet value"
+            "description": "Invalid RollNo supplied"
+          },
+          "404": {
+            "description": "Student Not Found"
           }
         }
-      },
+      }
+    },
+    "/student": {
+      "post": {
+        "tags": [
+          "student-api"
+        ],
+        "summary": "Add a new student to the store",
+        "description": "Add a new student to the store",
+        "operationId": "InsertStudent",
+        "requestBody": {
+          "description": "Create a new student in the store",
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/student-api"
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "description": "Successful operation",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/student-api"
+                }
+              },
+              "application/xml": {
+                "schema": {
+                  "$ref": "#/components/schemas/student-api"
+                }
+              }
+            }
+          },
+          "405": {
+            "description": "Invalid input"
+          }
+        }
+      }
+    },
+    "/subject/{id}": {
       "get": {
         "tags": [
           "student-api"
         ],
-        "summary": "Find student by RollNo",
-        "description": "Returns a single student",
-        "operationId": "Get",
+        "summary": "Find a subject by id",
+        "description": "Returns a subject",
+        "operationId": "GetSubject",
         "parameters": [
           {
-            "name": "rollNo",
+            "name": "id",
             "in": "path",
             "required": true,
             "schema": {
@@ -86,94 +142,18 @@
             "description": "Student not found"
           }
         }
-      },
-      "put": {
-        "tags": [
-          "student-api"
-        ],
-        "summary": "Update an existing student",
-        "description": "Update an existing student by Id",
-        "operationId": "Update",
-        "requestBody": {
-          "description": "Update an existent student in the store",
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/student-api"
-              }
-            }
-          },
-          "required": true
-        },
-        "parameters": [
-          {
-            "name": "rollNo",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "integer",
-              "format": "int64"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Successful operation",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/student-api"
-                }
-              }
-            }
-          },
-          "400": {
-            "description": "Invalid ID supplied"
-          },
-          "404": {
-            "description": "Pet not found"
-          },
-          "405": {
-            "description": "Validation exception"
-          }
-        }
       }
     },
-    "/student": {
-      "get": {
-        "tags": [
-          "student-api"
-        ],
-        "summary": "Fetch all the students",
-        "operationId": "GetAll",
-        "responses": {
-          "200": {
-            "description": "successful operation",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "array",
-                  "items": {
-                    "$ref": "#/components/schemas/student-api"
-                  }
-                }
-              }
-            }
-          },
-          "400": {
-            "description": "Invalid status value"
-          }
-        }
-      },
+    "/subject": {
       "post": {
         "tags": [
           "student-api"
         ],
-        "summary": "Add a new student to the store",
-        "description": "Add a new student to the store",
-        "operationId": "Create",
+        "summary": "Add a new subject to the store",
+        "description": "Add a new subject to the store",
+        "operationId": "InsertSubject",
         "requestBody": {
-          "description": "Create a new student in the store",
+          "description": "Create a new subject in the store",
           "content": {
             "application/json": {
               "schema": {
